testsuite/tests/partial-sigs/should_fail/NamedWildcardInTypeSplice.stderr

NamedWildcardInTypeSplice.hs:8:16: error:
    Wildcard ‘_a’ not allowed
      in a Template-Haskell quoted type
    In the Template Haskell quotation [t| _a -> _a |]

NamedWildcardInTypeSplice.hs:8:22: error:
    Wildcard ‘_a’ not allowed
      in a Template-Haskell quoted type
    In the Template Haskell quotation [t| _a -> _a |]
